fix footer z-index issues

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  z-index: -999 !important;
+  z-index: 1;
   margin-top: 30px;
   background-color: black;
   height: 100px;
